# av_lib_cpp

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.py  run.sh
.agent/rules/: AGENTS.md
apps/: __init__.py
apps/av_tools/: README.md  __init__.py  run.py
apps/av_tools/extract_codes/: __init__.py  cli.py  service.py
apps/av_tools/fetch_metadata/: __init__.py  cli.py  models.py  parser.py  scanner.py  service.py  writers.py
apps/av_tools/fetch_metadata/note/: cmd.md
apps/av_tools/index_formatter/: __init__.py  run.py
apps/av_tools/index_formatter/config/: config_loader.py  config_models.py  sanitize_rules.toml
apps/av_tools/index_formatter/core/: engine.py  patterns.py  rules_preprocess.py
apps/av_tools/index_formatter/note/: cmd.md
apps/av_tools/index_formatter/vendors/: __init__.py  carib.py  heyzo.py  ippondo.py
apps/av_tools/move_by_actor/: README.md  __init__.py  run.py  runtime.toml
apps/av_tools/move_by_actor/app/: api_client.py  cli.py  config.py  models.py  runtime_config.py  scanner.py
apps/av_tools/move_by_actor/note/: cmd.md
apps/av_tools/note/: Playwright.md  cmd.md
apps/av_tools/providers/: __init__.py  base.py  browser_fallback_provider.py  javbus_api_provider.py  javbus_browser_provider.py  javdb_provider.py  manager.py  r18_provider.py  runtime_options.py  utils.py
apps/cli/: cli_config.hpp  cli_presenter.hpp  cmd_main.cpp  input_parser.hpp
apps/cli/framework/: cli_app.cpp  cli_app.hpp
apps/cli/impl/: CLICommands.cpp  CLICommands.hpp
apps/gui/: i_gui_view.hpp  main.cpp
apps/gui/framework/: settings_store.hpp
apps/gui/imgui/: im_gui_presenter.hpp
apps/gui/imgui/framework/: gui_app.cpp  gui_app.hpp
apps/gui/imgui/impl/: im_gui_view.cpp  im_gui_view.hpp  imgui_settings_store.cpp  imgui_settings_store.hpp  theme_manager.cpp  theme_manager.hpp  ui_config.hpp  ui_panel.cpp  ui_panel.hpp
cmake/: clang_tools.cmake  sources.cmake  third_party.cmake
docs/: CHANGELOG.md  HISTORY.md  IMPORT_EXPORT_FORMAT.md
docs/av_tools/: 0.1.0.md  0.1.1.md  0.1.2.md
docs/history/: 0.3.0.md
docs/main/history/: 0.1.0.md  0.1.1.md  0.2.1.md  0.3.1.md
docs/testing/: basic_smoke_test.md
docs/toolchains/tests/: 2026-04-06.md
docs/toolchains/tools/: 2026-04-06.md
docs/toolchains/tools/move_by_actor/: 2026-04-06.md
lib/imgui/: .gitattributes
script/: build.py  build_fast.sh  build_tidy.sh  format.sh  run.sh  test_cli_smoke.ps1
script/builder/: __init__.py  build_runner.py  cli.py  cmake_utils.py  paths.py
src/: cmd_main.cpp  main.cpp
src/Adapters/: input_parser.hpp
src/Adapters/CLI/: cli_config.hpp  cli_presenter.hpp
src/Adapters/CLI/Impl/: CLICommands.cpp  CLICommands.hpp
src/Adapters/CLI/framework/: cli_app.cpp  cli_app.hpp
src/App/: Application.cpp  Application.h  Application.hpp  DatabaseManager.cpp  DatabaseManager.h  DatabaseManager.hpp  UIText.h  database_manager.hpp
src/Data/: DBSerializer.h  FastQueryDB.cpp  FastQueryDB.h  FastQueryDB.hpp  IDRepository.cpp
src/Data/repository/: IDRepository.h
src/Data/storage/: DBSerializer.cpp
src/IO/: TextFileReader.cpp  TextFileReader.hpp
src/Utils/: Validator.cpp  Validator.h  Validator.hpp
src/View/: IGuiView.h  IGuiView.hpp  ImGuiView.cpp  ImGuiView.h  UIConfig.h  i_gui_view.hpp
src/View/ImGui/: ImGuiView.cpp  ImGuiView.h  ImGuiView.hpp  ThemeManager.cpp  ThemeManager.hpp  UIConfig.h  UIConfig.hpp  UIPanel.cpp  UIPanel.hpp  im_gui_presenter.hpp
src/View/ImGui/Impl/: im_gui_view.cpp  im_gui_view.hpp  imgui_settings_store.cpp  imgui_settings_store.hpp  theme_manager.cpp  theme_manager.hpp  ui_Panel.cpp  ui_config.hpp  ui_panel.hpp
src/View/ImGui/framework/: gui_app.cpp  gui_app.hpp
src/View/framework/: settings_store.hpp
src/common/: MessageFormatter.cpp  MessageFormatter.h  MessageFormatter.hpp  cmd_pch.h  cmd_pch.hpp  pch.h  pch.hpp  version.hpp
src/core/app/: application.cpp  application.hpp  database_manager.hpp
src/core/data/: fast_query_db.cpp  fast_query_db.hpp
src/core/infrastructure/: database_manager.cpp  database_manager.hpp
src/core/io/: text_file_reader.cpp  text_file_reader.hpp
src/core/ports/: i_database_catalog.hpp  i_id_repository.hpp  i_text_reader.hpp
src/core/utils/: validator.cpp  validator.hpp
src/data/: fast_query_db.cpp  fast_query_db.hpp
src/infrastructure/: database_manager.cpp  database_manager.hpp
src/io/: text_file_reader.cpp  text_file_reader.hpp
src/ports/: i_database_catalog.hpp  i_id_repository.hpp  i_text_reader.hpp
src/presentation/cli/: cli_config.hpp  cli_presenter.hpp
src/presentation/cli/framework/: cli_app.cpp  cli_app.hpp
src/presentation/cli/impl/: CLICommands.cpp  CLICommands.hpp
src/presentation/gui/: i_gui_view.hpp
src/presentation/gui/imgui/: im_gui_presenter.hpp
tests/: conftest.py  test_index_formatter_engine.py  test_renamer.py
tests/apps/av_tools/: test_run.py
tests/apps/av_tools/extract_codes/: test_extract_codes_cli.py  test_extract_codes_service.py
tests/apps/av_tools/fetch_metadata/: test_fetch_metadata_cli.py  test_fetch_metadata_parser.py  test_fetch_metadata_scanner.py  test_fetch_metadata_service.py  (+1 more)
tests/cpp/: core_tests.cpp
tests/smoke/: expected_export_ids.txt  test_ids.txt
tests/tools/merge/: test_planner.py  test_service.py
tools/av_tools/: cmd.md  debug_web_fetch.py
tools/av_tools/debug_web_fetch_lib/: cli.py  fetchers.py  models.py  parsers.py  utils.py
tools/clean/: clean_small_videos.py  cmd.md
tools/index_formatter/config/: __init__.py
tools/index_formatter/core/: __init__.py  renamer.py  rules_parse.py
tools/index_formatter/note/: cmd.md
tools/index_formatter/vendors/: tokyo_hot.py
tools/merge/: cmd.md  logic.md
tools/merge/app/: __init__.py  cli.py  executor.py  models.py  planner.py  policy.py  service.py
tools/move_by_actor/: README.md
tools/move_by_actor/app/: api_client.py  api_runtime.py  cli.py  file_ops.py  models.py  service.py
tools/move_by_actor/note/: cmd.md
tools/script/: run.py
tools/script/builder/: build_runner.py  clang_tidy_runner.py  cli.py  paths.py  smoke_cli_runner.py  test_runner.py
(+39 files in other folders)
